k8s/k8s-mservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-mservice-deployment
  labels:
    app: k8s-mservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-mservice
  template:
    metadata:
      labels:
        app: k8s-mservice
    spec:
      containers:
        - name: k8s-mservice
          image: k8s-mservice:0.1.0-SNAPSHOT
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
