k8s/k8s-mservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-mservice
spec:
  type: NodePort
  selector:
    app: k8s-mservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
