k8s/k8s-mservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-mservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: k8s-mservice
      port:
        number: 8080
  rules:
    - host: k8s-mservice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-mservice
                port:
                  number: 8080
